--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,8 +1,3 @@
-*,
-html {
-  margin: 0%;
-  padding: 0%;
-}
 Footer div a,
 #About_Conficons div h2,
 Footer div h3,
